<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_blue">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/enterBill"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/title"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview11"

            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/arrivalStation"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText12"
            style="@style/my_edittext_style"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autofillHints="Account"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textview13"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1."
            android:gravity="center_vertical"
            android:text="@string/shenyang"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin1"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview21"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/consignor"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText22"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:autofillHints="Account"
            android:background="@color/white"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin2"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview31"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/consignorPhone"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText32"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:autofillHints="Account"
            android:background="@color/white"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin3"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview41"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/consignee"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText42"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:autofillHints="Account"
            android:background="@color/white"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin4"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview51"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/consigneePhone"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText52"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:autofillHints="Account"
            android:background="@color/white"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin5"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview61"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/goodsName"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText62"
            style="@style/my_edittext_style"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:autofillHints="Account"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin6"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview71"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/pieces"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText72"
            style="@style/my_edittext_style"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:autofillHints="Account"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin7"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview81"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/paidFee"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText82"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:autofillHints="Account"
            android:background="@color/white"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin8"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview91"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:text="@string/unpaidFee"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameText92"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:autofillHints="Account"
            android:background="@color/white"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        tools:ignore="UseCompoundDrawables">

        <Button
            android:id="@+id/returnButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="50"
            android:background="@drawable/btn_shape"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="50"
            android:background="@drawable/btn_shape"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</RelativeLayout>